<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnOne"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:text="@string/btnOne"
        app:layout_constraintEnd_toStartOf="@+id/btnTwo"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnClear"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnZero"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnZero"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:onClick="handleClick"
        android:text="@string/btnEqual"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/btnZero"
        app:layout_constraintTop_toBottomOf="@+id/btnNine" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnEight"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnEight"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnFive"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnFive"
        app:layout_constraintStart_toEndOf="@+id/btnFour"
        app:layout_constraintTop_toBottomOf="@+id/btnTwo" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnTwo"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnTwo"
        app:layout_constraintEnd_toStartOf="@+id/btnThree"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnThree"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btnThree"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnSix"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnSix"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnThree" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnNine"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnNine"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnSum"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/btnSum"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnDiv"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnDiv"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnMul" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnMul"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnMul"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnSub" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnSub"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnSub"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/btnSum" />

    <Button
        android:onClick="handleClick"
        android:id="@+id/btnSeven"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnSeven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <Button
        android:onClick="handleClick"

        android:id="@+id/btnFour"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOne" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23119015" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6155718"
    />

</androidx.constraintlayout.widget.ConstraintLayout>